[package]
name = "kil_port"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netstat2 = "0.9.1"
heim = {version = "0.1.0-rc.1", default-features = false, features = [ "process"] }
smol = "1.2.5"
futures = "0.3.21"
colored="2.0.0"
seahorse = "2.1.0"